# GStreamer-Topology

./: .gitignore  26_release_record_smoothing.pld.rtf  27_pipmux.pld.rtf  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  qa_report.yml  sprint_task.yml
.github/workflows/: desktop-release.yml
docs/: ARCHITECTURE.md  GITHUB_PROJECTS.md  IMPLEMENTATION_PLAN.md  PRD.md  PROCESS_POLICY.md  QA_RESULTS_2026-04-26.md  REPOSITORY_STRUCTURE.md  SPRINT_02_PREP.md  SPRINT_03_WEEK2.md  SPRINT_04_PREP.md  SPRINT_05_PREP.md  SPRINT_06_PREP.md  SPRINT_07_PREP.md  SPRINT_08_PREP.md  SPRINT_09_PREP.md  SPRINT_10_PREP.md  TECH_SPIKES.md
fixtures/pipelines/: 01_videotestsrc_linear.pld  02_videotestsrc_tee_branch.pld  03_audiotestsrc_basic.pld  04_compositor_named_pad.pld  26_release_record_smoothing.pld  27_pipmux.pld  README.md  playback_audio_only.pld  playback_injection_blocked.pld  playback_rtp_dual_video.pld  playback_rtp_single_video.pld  playback_rtp_videotestsrc_dual_sender.pld  playback_rtp_videotestsrc_receiver.pld  playback_rtp_videotestsrc_sender.pld  playback_rtsp_single_video.pld
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: pipeline.rs
src-tauri/src/models/: mod.rs  pipeline.rs
src-tauri/src/parser/: mod.rs  normalizer.rs  pipeline.rs
src/app/: AppShell.tsx  backend.ts  status.ts
src/components/: ConnectionBadge.tsx  Icon.tsx  (+1 more)
(+16 files in other folders)
