[package]
name = "gstreamer-to-topology"
version = "0.1.0"
description = "Backend for the GStreamer topology viewer"
authors = ["Codex"]
license = "MIT"
repository = ""
default-run = "gstreamer-to-topology"
edition = "2021"
rust-version = "1.77"

[lib]
name = "gstreamer_to_topology_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "=2.0.0", features = [] }
thiserror = "1"
ssh2 = { version = "0.9.5", features = ["vendored-openssl"] }

[build-dependencies]
tauri-build = { version = "=2.0.0", features = [] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "=3.5.1"
security-framework-sys = "=2.15.0"
# Tauri dev on Cargo 1.83 can resolve native-tls -> tempfile to a newer
# edition2024-only chain. Pin the compatible line until the toolchain moves.
tempfile = "=3.14.0"
